--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Lovable" />
     <link rel="icon" href="/lovable-uploads/b7872c98-7113-4209-b513-4dc147770d2d.png" type="image/png">
 
-    <meta property="og:title" content="milo-tutors-you" />
+    <meta property="og:title" content="Milo Learn Hub" />
     <meta property="og:description" content="Lovable Generated Project" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
