--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>milo-tutors-you</title>
+    <title>Milo Learn Hub</title>
     <meta name="description" content="Lovable Generated Project" />
     <meta name="author" content="Lovable" />
     <link rel="icon" href="/lovable-uploads/b7872c98-7113-4209-b513-4dc147770d2d.png" type="image/png">
